Add support for multiblock "components" to extract common logic